# render

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  conanfile.txt
asset/: houtou.mtl
src/: CMakeLists.txt  main.cc
src/core/: application.cc  asset.cc  node.cc  node.hh  pipeline.cc  render_target.cc  scene.cc  script.hh  softrender.cc  texture.cc  tool.cc  vulkan_info.cc  vulkanrender.cc  window.cc
src/include/: application.hh  asset.hh  frame.hh  gltf_type.hh  input.hh  node.hh  observer.hh  pipeline.hh  render_target.hh  scene.hh  script.hh  script_implement.hh  softrender.hh  texture.hh  tool.hh  triangle.hh  type_alias.hh  vulkan_info.hh  vulkanrender.hh  window.hh
src/script/: script.cc  script_implement.cc
src/shader/: object.frag  object.vert  shader.frag  shader.vert
src/ui/: mainwindow.cc  mainwindow.hh  mainwindow.ui
test/: test.cc
